<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title">Image Title</string>
    <string name="image_result">Image Result</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_menu_filters">More Filters</string>
    <string name="title_activity_select_filters">Advanced Filters</string>
    <string name="size_label">Image Size</string>
    <string name="color_label">Color Filter</string>
    <string name="type_label">Image Type</string>
    <string name="site_label">Site Filter</string>
    <string name="save_label">Save</string>
    <string name="site_prompt">Enter a website URL</string>
    <string name="title_share">Share</string>
    <string name="title_activity_search">Image Search</string>
    
</resources>
